--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
       .footer a {
       color: #ccccff;
       }
+      /* http://support.addthis.com/customer/portal/questions/1136091-share-buttons-in-center-position */
+      div.addthis_toolbox {
+      width: 300px;
+      margin: 0 auto;
+      }
     </style>
   </head>
   <body>
@@ -163,7 +168,7 @@
 		</div>
 		<div class="span4">
                   <div class="linediv-c">
-                    <h3>£1000</h3> <p>f £5,000</p>
+                    <h3>£1000</h3> <p>of £5,000</p>
                   </div>
 		</div>
 		<div class="span4">
@@ -192,10 +197,18 @@
 	    </div>
 	    <div class="row-fluid">
               <div class="span8 offset2 social">
-		<!-- Social buttons are not included in default Bootstrap. -->
-		<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-		<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-		<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+		<!-- AddThis Button BEGIN -->
+		<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		  <a class="addthis_button_facebook"></a>
+		  <a class="addthis_button_twitter"></a>
+		  <a class="addthis_button_sinaweibo"></a>
+		  <a class="addthis_button_google_plusone_share"></a>
+		  <a class="addthis_button_linkedin"></a>
+		  <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
+		</div>
+		<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51feae493a88560c"></script>
+		<!-- AddThis Button END -->
 	      </div>
             </div>
 	  </div>
