--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>OxSale</title>
+    <tile>OxSale</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -205,7 +205,8 @@
               <div class="span6 offset3 order">
 		<!-- Standard Bootstrap button. -->
 		<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-		<button class="btn btn-success btn-large">Preorder</button>
+		<a class="coinbase-button" data-code="e692a7c229e3971c1fee7f1337e81ad7" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/e692a7c229e3971c1fee7f1337e81ad7">Preorder With Bitcoin</a>
+		<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
               </div>
 	    </div>
 	    <div class="row-fluid">
